--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -2,17 +2,15 @@
   background-color: #161616;
   display: flex;
   align-items: center;
-  padding: 100px;
-  height: 100vh;
   position: relative;
+  padding: 80px 50px;
 }
 
 .about-text {
-  width: 100%;
-  height: auto;
   color: white;
-  font-size: 1.5rem;
-  margin-right: 60px;
+  font-size: 1.2rem;
+  width: 100%;
+  padding: 30px;
 }
 
 .about-text > span {
@@ -40,17 +38,18 @@
 }
 
 .about-img {
+  height: auto;
   width: 100%;
-  height: 100%;
-  position: relative;
   display: flex;
   align-items: center;
   justify-content: center;
+  position: relative;
 }
 
 .about-img > img {
   position: absolute;
-  max-width: 100%;
+  max-width: 540px;
+  width: 100%;
   height: auto;
 }
 
@@ -73,18 +72,18 @@
   z-index: 4;
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 576px) {
   .about {
-    padding: 25px;
     flex-direction: column-reverse;
     text-align: center;
+    padding: 20px;
   }
 
   .about-text {
     font-size: 1rem;
     margin: 0;
-    padding: 30px 10px 0 10px;
-    height: 100%;
+    padding: 30px 20px;
+    position: relative;
   }
 
   .about-text h1 {
@@ -101,50 +100,14 @@
     line-height: 20px;
   }
 
-  .about-img > img {
-    height: 100%;
-  }
-
-  .about-img > img:nth-child(3) {
-    z-index: 3;
-    top: 3px;
-  }
-
-  .about-img > img:nth-child(4) {
-    z-index: 1;
-    top: 3px;
-  }
-}
-
-@media screen and (max-width: 767px) {
-  .about {
-    padding: 40px;
-    flex-direction: column-reverse;
-    text-align: center;
-  }
-
-  .about-text {
-    font-size: 1.2rem;
-    margin: 0;
-    padding: 30px 10px 0 10px;
-  }
-
-  .about-text h1 {
-    margin: 0;
-    font-size: 2.5em;
-    text-shadow: -3.2px -3.2px 0 #fff, 3.2px -3.2px 0 #fff, -3.2px 3.2px 0 #fff,
-      3.2px 3.2px 0 #fff;
-  }
-
-  .about-text > p {
-    text-indent: 20px;
-    text-align: justify;
-    font-size: 0.9rem;
-    line-height: 20px;
+  .about-img {
+    height: 330px;
   }
 
   .about-img > img {
+    position: absolute;
     height: 100%;
+    width: auto;
   }
 
   .about-img > img:nth-child(3) {
