--- a/src/components/Work/Work.css
+++ b/src/components/Work/Work.css
@@ -3,24 +3,27 @@
   background-color: #161616;
   display: flex;
   align-items: center;
-  padding: 50px 0;
-  height: 100vh;
+  padding: 50px 50px 50px 0;
 }
 
 .img-container {
   display: flex;
   align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: auto;
+  position: relative;
 }
 
-.img-container > svg {
+.img-container svg {
   font: bold 140px "Montserrat";
   width: 100%;
   height: 340px;
   fill: #fff;
   z-index: 2;
   position: absolute;
-  top: 0;
-  right: 0;
+  bottom: 0;
+  left: 20px;
   filter: drop-shadow(0px 4px 2px #000000);
 }
 
@@ -40,15 +43,15 @@
 }
 
 .img-container > img {
-  max-width: 50%;
+  max-width: 120%;
   height: auto;
   position: absolute;
-  left: -210px;
+  left: -150px;
   z-index: 1;
 }
 
 .text-container {
-  font-size: 1.5rem;
+  font-size: 1.2em;
   width: 100%;
   color: white;
   padding: 50px;
@@ -62,7 +65,7 @@
 
 .text-container > h1 {
   margin: 0;
-  font-size: 3em;
+  font-size: 3.4em;
   font-family: "Englebert", sans-serif;
   color: #161616;
   text-shadow: 4px 4px 0 #fff, -4px -4px 0 #fff, 4px -4px 0 #fff,
@@ -74,7 +77,7 @@
 }
 
 .text-container > p:nth-child(3) {
-  text-indent: 50px;
+  text-indent: 80px;
   text-align: justify;
   text-justify: inter-word;
 }
@@ -132,11 +135,11 @@
   border-color: black transparent transparent transparent;
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 576px) {
   .work {
     flex-direction: column;
     text-align: start;
-    padding: 25px;
+    padding: 55px 25px;
   }
 
   .text-container > .btn {
@@ -181,89 +184,16 @@
   }
 
   .img-container > img {
-    max-width: 100%;
+    max-width: 330px;
     position: relative;
     left: 0;
     top: 0;
   }
 
-  .img-container > svg {
+  .img-container svg {
     left: 10px;
     top: -150px;
-  }
-
-  .text-container > .icon-container {
-    display: flex;
-  }
-
-  .icon-container > .tooltip {
-    margin-right: 10px;
-  }
-
-  .icon-container > .tooltip > img {
-    width: 30px;
-  }
-}
-
-@media screen and (max-width: 767px) {
-  .work {
-    flex-direction: column;
-    text-align: start;
-    padding: 40px;
-  }
-
-  .text-container > .btn {
-    margin-top: 20px;
-    width: 140px;
-    height: 35px;
-    font-size: 12px;
-  }
-
-  .text-container > .btn > span {
-    margin-right: 5px;
-  }
-
-  .text-container > .btn > span > svg {
-    width: 30px;
-    height: 20px;
-  }
-
-  .text-container {
-    font-size: 1rem;
-    margin: 0;
-    padding: 10px;
-  }
-
-  .text-container > h1 {
-    margin: 0;
-    font-size: 2.5em;
-    text-shadow: -3.2px -3.2px 0 #fff, 3.2px -3.2px 0 #fff, -3.2px 3.2px 0 #fff,
-      3.2px 3.2px 0 #fff;
-  }
-
-  .text-container > p:nth-child(3) {
-    text-indent: 20px;
-    text-align: justify;
-    font-size: 0.9rem;
-    line-height: 20px;
-  }
-
-  .text-container > code {
-    text-align: start;
-    margin-bottom: 10px;
-  }
-
-  .img-container > img {
-    max-width: 100%;
-    position: relative;
-    left: 0;
-    top: 0;
-    padding: 0 40px 0 40px;
-  }
-
-  .img-container > svg {
-    left: 0px;
-    top: -160px;
+    font-size: 100px;
   }
 
   .text-container > .icon-container {
