--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -1,25 +1,76 @@
+a {
+  text-decoration: none;
+}
+
 .btn {
-    width: 200px;
-    height: 45px;
-    background-color: #2d2d2d;
-    color: #fff;
-    font-family: 'Montserrat';
-    border-radius: 5px;
-    border: none;
-    font-size: 1rem;
-    font-weight:700;
-    box-shadow: 1px 4px 15px #090909;
-    margin-top: 40px;
-    cursor: pointer;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  width: 200px;
+  height: 45px;
+  background-color: #2d2d2d;
+  color: #fff;
+  font-family: "Montserrat";
+  border-radius: 5px;
+  border: none;
+  font-size: 1rem;
+  font-weight: 700;
+  box-shadow: 1px 4px 15px #090909;
+  margin-top: 40px;
+  margin-right: 20px;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: all 0.2s ease-in-out;
+}
+
+.btn:hover {
+  color: rgb(235, 235, 235);
+  background-color: #181818;
 }
 
 .btn > span {
-    margin-right: 10px;
-    font-size: 1.6rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  margin-right: 10px;
+  font-size: 1.6rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+@media screen and (max-width: 1074px) {
+  .btn {
+    width: 140px;
+    height: 37px;
+    font-size: 12px;
+    font-weight: normal;
+    margin-top: 30px;
+  }
+
+  .btn span {
+    font-size: 1.3rem;
+  }
+}
+
+@media screen and (max-width: 483px) {
+  .btn {
+    width: 140px;
+    height: 37px;
+    font-size: 12px;
+    font-weight: normal;
+  }
+
+  .btn span {
+    font-size: 1.3rem;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .btn {
+    width: 110px;
+    height: 30px;
+    font-size: 10px;
+    font-weight: normal;
+  }
+
+  .btn span {
+    font-size: 0.8rem;
+  }
 }
