--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -3,8 +3,8 @@
   background-color: #161616;
   display: flex;
   align-items: center;
-  justify-content: center;
-  padding: 0 80px;
+  justify-content: space-around;
+  padding: 80px;
 }
 
 .contact > .form-container {
@@ -22,7 +22,7 @@
 
 .form-container > h1 {
   margin: 0;
-  font-size: 3rem;
+  font-size: 4rem;
   font-family: "Englebert", sans-serif;
   color: #161616;
   text-shadow: -4.4px -4.4px 0 #fff, 4.4px -4.4px 0 #fff, -4.4px 4.4px 0 #fff,
@@ -32,6 +32,14 @@
 
 .form-container > p {
   margin-top: 10px;
+}
+
+.form-container > p a {
+  color: #fff;
+}
+
+.form-container > p a:hover {
+  color: #d52d2d;
 }
 
 .form-container > form > input {
@@ -47,6 +55,12 @@
   background-color: #ebebeb;
 }
 
+.form-container > form > input:focus,
+.form-container > form > textarea {
+  outline-color: #d52d2d;
+  outline-width: 4px;
+}
+
 .form-container > form > textarea {
   width: 100%;
   border-radius: 5px;
@@ -55,6 +69,7 @@
   font-family: "Montserrat", sans-serif;
   font-size: 1rem;
   background-color: #ebebeb;
+  resize: vertical;
 }
 
 .contact > .social-container {
@@ -73,6 +88,16 @@
   height: auto;
 }
 
+.social-container .sent {
+  position: absolute;
+  width: auto;
+  height: auto;
+  top: -60px;
+  left: -300px;
+  transition: width 0.3s;
+  animation: fadeIn 0.5s ease;
+}
+
 .social-container > h1 {
   text-transform: uppercase;
   color: #fff;
@@ -87,21 +112,58 @@
   margin-top: 10px;
 }
 
-.social > img {
-  width: 60px;
-  margin-right: 15px;
+.social {
+  display: flex;
 }
 
-@media screen and (max-width: 480px) {
+.social .icon a {
+  width: 50px;
+  height: 50px;
+  margin-right: 10px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.social .icon #icon {
+  fill: #fff;
+  width: 40px;
+  height: 40px;
+  z-index: 2;
+  margin-right: 5px;
+  cursor: pointer;
+}
+
+.social .icon:nth-child(4) #icon {
+  width: 45px;
+  height: 45px;
+}
+
+.social .icon a svg:hover > path {
+  fill: #d52d2d;
+}
+
+@keyframes fadeIn {
+  0% {
+    transform: scale(40%) rotate(2deg);
+    opacity: 0;
+  }
+  100% {
+    transform: scale(100%) rotate(0deg);
+    opacity: 1;
+  }
+}
+
+@media screen and (max-width: 768px) {
   .contact {
-    padding: 25px;
+    padding: 30px;
     flex-direction: column;
-    height: 120vh;
   }
 
   .contact > .form-container {
     font-size: 1rem;
-    padding: 10px;
+    padding: 20px 10px;
   }
 
   .form-container > h1 {
@@ -118,32 +180,30 @@
   }
 
   .form-container > form > input {
-    height: 35px;
-    border-radius: 2px;
+    height: 50px;
+    border-radius: 5px;
     padding: 0.375rem 1rem;
     font-size: 13px;
     margin-bottom: 1rem;
   }
 
   .form-container > form > textarea {
-    border-radius: 2px;
+    border-radius: 5px;
     padding: 0.8rem 1rem;
     font-size: 13px;
-    height: 85px;
   }
 
-  .form-container > form > .btn {
+  .form-container > form a .btn {
     width: 100%;
-    margin-top: 10px;
-    height: 35px;
     font-size: 14px;
-    border-radius: 2px;
+    border-radius: 5px;
     text-transform: uppercase;
     font-weight: normal;
+    margin-top: 20px;
   }
 
   .contact > .social-container {
-    padding: 25px 10px;
+    padding: 25px;
     height: 100%;
   }
 
@@ -160,5 +220,80 @@
   .social-container > .social > img {
     margin-right: 10px;
     width: 50px;
+  }
+
+  .social-container .sent {
+    transform: scaleX(1) rotate(38deg);
+    left: -90px;
+    top: -130px;
+  }
+
+  @keyframes fadeIn {
+    0% {
+      transform: scale(40%) rotate(38deg);
+      opacity: 0;
+    }
+    100% {
+      transform: scale(100%) rotate(38deg);
+      opacity: 1;
+    }
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .contact {
+    flex-direction: column;
+  }
+  .contact > .social-container {
+    padding: 25px 10px;
+  }
+
+  .social-container .sent {
+    transform: scaleX(1) rotate(38deg);
+    left: -150px;
+    top: -170px;
+  }
+}
+
+@media screen and (max-width: 468px) {
+  .social-container .sent {
+    left: -120px;
+    top: -140px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .contact {
+    padding: 10px;
+  }
+
+  .form-container > form > input {
+    height: 35px;
+    font-size: 10px;
+    padding: 0.8rem;
+  }
+
+  .form-container > form > textarea {
+    font-size: 10px;
+    padding: 0.8rem;
+  }
+
+  .social-container .sent {
+    left: -100px;
+    top: -80px;
+  }
+
+  .social .icon #icon {
+    width: 30px;
+    height: 30px;
+  }
+
+  .social .icon:nth-child(4) #icon {
+    width: 35px;
+    height: 35px;
+  }
+
+  .form-container > form a .btn {
+    font-size: 12px;
   }
 }
