--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -13,7 +13,7 @@
     margin: 0;
 }
 
-@media screen and (min-width: 320px) and (max-width: 480px) {
+@media screen and (max-width: 480px) {
     .footer {
         height: 40px;
         font-size: 14px;
