--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -41,9 +41,105 @@
   height: auto;
 }
 
+.hero #light1 {
+  animation: light 4s linear infinite;
+  opacity: 1;
+}
+
+.hero #light2 {
+  animation: light2 4s linear infinite;
+  opacity: 1;
+}
+
+@keyframes light {
+  0% {
+    opacity: 0;
+  }
+
+  20% {
+    opacity: 0;
+  }
+
+  21% {
+    opacity: 1;
+  }
+
+  25% {
+    opacity: 0;
+  }
+
+  30% {
+    opacity: 0;
+  }
+
+  31% {
+    opacity: 1;
+  }
+
+  35% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 0;
+  }
+}
+
+
+@keyframes light2 {
+  0% {
+    opacity: 0;
+  }
+
+  20% {
+    opacity: 0;
+  }
+
+  21% {
+    opacity: 0;
+  }
+
+  25% {
+    opacity: 1;
+  }
+
+  30% {
+    opacity: 0;
+  }
+
+  31% {
+    opacity: 1;
+  }
+
+  35% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 0;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .hero img {
+    height: 45%;
+    width: 1450px;
+    left: 0;
+    bottom: 0;
+  }
+
+  .hero-title {
+    padding-top: 180px;
+  }
+}
+
 @media screen and (max-width: 576px) {
   .hero {
     height: calc(100vh - 64px);
+  }
+
+  .hero img {
+    width: 920px;
   }
 
   .hero-title {
@@ -66,5 +162,15 @@
   .hero-title > div:nth-last-child(2),
   .hero-title > span:nth-last-child(1) {
     margin-left: 70px;
+  }
+}
+
+@media screen and (max-width: 375px) {
+  .hero-title {
+    font-size: 1.2rem;
+  }
+
+  .hero-title div {
+    font-size: 3.5rem;
   }
 }
