--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -15,6 +15,11 @@
   flex-direction: column;
 }
 
+.hero-title h4 {
+  margin: 0;
+  font-weight: 500;
+}
+
 .hero-title > div {
   text-transform: uppercase;
   line-height: 6rem;
@@ -22,7 +27,7 @@
 }
 
 .hero-title > div:nth-last-child(2),
-.hero-title > span:nth-last-child(1) {
+.hero-title > h4:nth-last-child(1) {
   margin-left: 100px;
 }
 
@@ -144,7 +149,7 @@
 
   .hero-title {
     font-size: 2rem;
-    padding-top: 150px;
+    padding-top: 35%;
   }
 
   .hero-title > div {
