--- a/src/components/Skill/Skill.css
+++ b/src/components/Skill/Skill.css
@@ -13,9 +13,10 @@
   font-size: 1.5rem;
 }
 
-.skill-text > span {
+.skill-text h4 {
   text-transform: uppercase;
   color: #989898;
+  margin: 0;
 }
 
 .skill-text > h1 {
