--- a/src/components/Work/Work.css
+++ b/src/components/Work/Work.css
@@ -88,8 +88,10 @@
     -4px 4px 0 #fff, 4px 4px 0 #fff;
 }
 
-.text-container h1 > span {
-  display: block;
+.text-container h3 {
+  text-transform: uppercase;
+  margin: 0;
+  color: #989898;
 }
 
 .text-container > p:nth-child(3) {
