--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,5 +1,7 @@
 .navbar {
-  position: relative;
+  position: absolute;
+  z-index: 99;
+  width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
