final hero line-height

--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -32,6 +32,10 @@
   font-size: 40px;
   text-transform: none;
   display: block;
+  line-height: 2ch;
+}
+
+.hero-title h1 span:first-child {
   line-height: 3ch;
 }
 
@@ -132,12 +136,12 @@
     font-size: 100px;
     line-height: 2.5cm;
   }
-  
+
   .hero-title h1 span:last-child,
   .hero-title h1 span:nth-child(2) {
     margin-left: 70px;
   }
-  
+
   .hero-title h1 span:last-child,
   .hero-title h1 span:first-child {
     font-size: 35px;
@@ -150,19 +154,19 @@
   }
 
   .hero-title {
-    margin-bottom:30px;
+    margin-bottom: 30px;
   }
 
   .hero-title > h1 {
     font-size: 80px;
     line-height: 2.2cm;
   }
-  
+
   .hero-title h1 span:last-child,
   .hero-title h1 span:nth-child(2) {
     margin-left: 70px;
   }
-  
+
   .hero-title h1 span:last-child,
   .hero-title h1 span:first-child {
     font-size: 25px;
@@ -177,19 +181,19 @@
 
 @media screen and (max-width: 360px) {
   .hero-title {
-    margin-bottom:30px;
+    margin-bottom: 30px;
   }
 
   .hero-title > h1 {
     font-size: 60px;
     line-height: 1.5cm;
   }
-  
+
   .hero-title h1 span:last-child,
   .hero-title h1 span:nth-child(2) {
     margin-left: 70px;
   }
-  
+
   .hero-title h1 span:last-child,
   .hero-title h1 span:first-child {
     font-size: 20px;
