--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -15,12 +15,12 @@
 
 .about-text > h4:nth-child(1) {
   text-transform: uppercase;
-  margin: 0;
+  margin: 10px 0;
   color: #989898;
 }
 
 .about-text > h4:nth-child(3) {
-  margin-top: 0;
+  margin-top: 10px;
   color: #989898;
 }
 
