--- a/src/components/Skill/Card.css
+++ b/src/components/Skill/Card.css
@@ -1,19 +1,15 @@
 .card {
   background-color: #2d2d2d;
   width: 130px;
-  height: 45%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
   color: #fff;
-  margin: auto 20px;
+  margin: 20px 10px;
   border-radius: 5px;
+  text-align: center;
 }
 
 .card img {
   width: 80px;
-  margin-top: 20px;
+  margin-top: 35px;
 }
 
 
